log

Fri Mar 11 20:40:48 PSADT 2022: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'suma':
exercises.c:15:12: error: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Werror=format=]
    scanf("%d", a);
           ~^   ~
exercises.c:15:12: error: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Werror=format=]
exercises.c:16:12: error: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Werror=format=]
    scanf("%d", b);
           ~^   ~
exercises.c:16:12: error: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Werror=format=]
exercises.c:17:6: error: assignment to 'int *' from 'int' makes pointer from integer without a cast [-Werror=int-conversion]
    c = a+b;
      ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'test_suma_n':
test.c:88:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%s %d,",msg,a[i]);
                 ^~~          ~~~
test.c:90:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%s]",msg);
             ^~~       ~~~
test.c:90:21: error: 'sprintf' may write a terminating nul past the end of the destination [-Werror=format-overflow=]
     sprintf(msg,"%s]",msg);
                     ^
test.c:90:5: note: 'sprintf' output between 2 and 301 bytes into a destination of size 300
     sprintf(msg,"%s]",msg);
     ^~~~~~~~~~~~~~~~~~~~~~
test.c:88:25: error: '%d' directive writing between 1 and 11 bytes into a region of size between 0 and 299 [-Werror=format-overflow=]
         sprintf(msg,"%s %d,",msg,a[i]);
                         ^~
test.c:88:9: note: 'sprintf' output between 4 and 313 bytes into a destination of size 300
         sprintf(msg,"%s %d,",msg,a[i]);
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
70a3102
Fri Mar 11 20:42:39 PSADT 2022: 
 exercises.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaNultimos':
exercises.c:42:4: error: statement with no effect [-Werror=unused-value]
    for (inicio; inicio < n; inicio++)
    ^~~
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'test_suma_n':
test.c:88:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%s %d,",msg,a[i]);
                 ^~~          ~~~
test.c:90:13: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
     sprintf(msg,"%s]",msg);
             ^~~       ~~~
test.c:90:21: error: 'sprintf' may write a terminating nul past the end of the destination [-Werror=format-overflow=]
     sprintf(msg,"%s]",msg);
                     ^
test.c:90:5: note: 'sprintf' output between 2 and 301 bytes into a destination of size 300
     sprintf(msg,"%s]",msg);
     ^~~~~~~~~~~~~~~~~~~~~~
test.c:88:25: error: '%d' directive writing between 1 and 11 bytes into a region of size between 0 and 299 [-Werror=format-overflow=]
         sprintf(msg,"%s %d,",msg,a[i]);
                         ^~
test.c:88:9: note: 'sprintf' output between 4 and 313 bytes into a destination of size 300
         sprintf(msg,"%s %d,",msg,a[i]);
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
340c48f
